# SFML-Projects

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: my_workflow.yml
brownian/: .travis.yml  CMakeLists.txt
engine/: CMakeLists.txt
engine/Example/: MenuState.cpp
fantasy/: .appveyor.yml  Application.hpp  Level.cpp  Level.hpp  Perlin.hpp  Player.cpp  TileMap.hpp
mandelbrot/: CMakeLists.txt
media/: level.txt
misc/: build_appimage.sh  desktop_file.desktop  upload_assets.sh
pong/: .appveyor.yml  CMakeLists.txt  application.cpp  application.hpp  gameState.hpp  main.cpp  menuState.cpp  particles.cpp  resourceHolder.cpp  resourceHolder.hpp  stateMachine.cpp  stateMachine.hpp
space/: Planet.cpp  Spaceship.cpp  Spaceship.hpp  main.cpp
src/: CMakeLists.txt
src/brownian/: BrownianState.cpp  BrownianState.h  CMakeLists.txt  README.md  main.cpp
src/engine/: Button.cpp  Button.h  CMakeLists.txt  GameEngine.cpp  GameEngine.h  ResourceHolder.cpp  ResourceHolder.h  State.cpp  State.h  engine.cpp  engine.h  linux.cpp  utilitary.cpp  utilitary.hpp
src/example/: BrownianState.cpp  BrownianState.h  Button.cpp  CMakeLists.txt  MenuState.cpp  MenuState.h  main.cpp
src/fantasy/: Application.cpp  CMakeLists.txt  FantasyState.cpp  FantasyState.hpp  Level.cpp  Level.hpp  Perlin.cpp  Player.cpp  Player.hpp  ResourcePath.cpp  TileMap.cpp  TileMap.hpp  main.cpp
src/mandelbrot/: CMakeLists.txt  GUI.cpp  GUI.h  MandelbrotState.cpp  MandelbrotState.h  Parameters.h
src/menu/: Button.h  CMakeLists.txt  MenuState.cpp  MenuState.h  main.cpp
src/pong/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.hpp  PongState.cpp  PongState.hpp  gameState.cpp  introState.cpp  introState.hpp  menuState.hpp  particles.hpp  state.cpp  state.hpp
src/space/: CMakeLists.txt  Physical.cpp  Physical.hpp  Planet.hpp  SpaceState.cpp  SpaceState.hpp  Spaceship.cpp  Spaceship.hpp  main.cpp
